--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+# Created by .gitignore support plugin (hsz.mobi)
+### Maven template
 target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+Secret.java
+.idea
+.DS_STORE
