--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <tagmycode-sdk.version>0.1.2-SNAPSHOT</tagmycode-sdk.version>
+        <tagmycode-sdk.version>0.1.2</tagmycode-sdk.version>
     </properties>
 
     <licenses>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.3</version>
+            <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
